{x11,wayland}: Fix restoring fullscreen windows

If the window has been originally on another output, make sure that the
window will be properly put back on it.

This logic seem to originate from 7d673802050ebeb55572b0275416eb87a7c251bc,
but it's not necessary anymore because geometry restore will be updated
if the window is moved to another output by the user.

BUG: 465358


(cherry picked from commit 9807c83929692707fdbae23592c1b4db1a57ac5f)